# nem-bidding-dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docs/source/: README.md  api.md  conf.py  database.md  development.md  examples.md  index.md  indices.md  intro.md  nemseer_example.md  roadmap.md
examples/: agg_bids.csv  dispatch_data.csv  duids_bids.csv  get_web_app_aggregate_bids_data.py  get_web_app_duid_bids_data.py
src/bidding-dashboard/: __init__.py  fetch_data.py  filter_region_demand.py  layout_template.py  plot_bids.py  plot_duid_availability.py  plot_region_demand.py  populate_db.py  preprocessing.py  query_db.py  query_supabase.py
src/bidding-dashboard/assets/: base_styles.css  fonts.css  template_styles.css
src/nem_bidding_dashboard/: __init__.py  build_postgres_db.py  create_plots.py  defaults.py  fetch_and_preprocess.py  fetch_data.py  index_creation.py  input_validation.py  layout_template.py  plot_bids.py  plot_duid_availability.py  plot_region_demand.py  populate_db.py  populate_postgres_db.py  populate_supabase_db.py  postgres_helpers.py  postgress_helpers.py  preprocessing.py  query_cached_data.py  query_functions_for_dashboard.py  query_postgres_db.py  query_supabase.py  query_supabase_db.py  run_dashboard.py
src/nem_bidding_dashboard/assets/: base_styles.css  template_styles.css
tests/: defaults.py  downsize_cache.py  load_supabase.py  mock_nemosis.py  smoke.py  smoke_two.py  test_compare_query_cache_to_query_postgres.py  test_compare_query_cache_to_query_supabase.py  test_compare_three_query_methods.py  test_downloader.py  test_duid_data.csv  test_duid_data_preprocessing_output.csv  test_fetch_and_preprocess.py  test_fetch_data.py  test_loader.py  test_preprocessing.py  test_query_cached_data.py
tests/nemosis_cache/: NEM Registration and Exemption List.xls  PUBLIC_DVD_BIDDAYOFFER_D_20211229.parquet  PUBLIC_DVD_BIDDAYOFFER_D_20211230.parquet  PUBLIC_DVD_BIDDAYOFFER_D_20211231.parquet  PUBLIC_DVD_BIDPEROFFER_D_20211231.parquet  PUBLIC_DVD_BIDPEROFFER_D_20220101.parquet  PUBLIC_DVD_DISPATCHLOAD_202201010000.parquet  PUBLIC_DVD_DISPATCHPRICE_202201010000.parquet  PUBLIC_DVD_DISPATCHREGIONSUM_202201010000.parquet
