[tool.poetry]
name = "nem-bidding-dashboard"
version = "1.0.2"
description = "A dashboard for visualising bidding data from the Australian National Electricity Market"
authors = ["Patrick Chambers", "Nicholas Gorman"]
license = "BSD 3-clause"
readme = "README.md"

# Main dependencies for the package via poetry. Package users will need these dependencies.
[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
# assuming pandas is required!
pandas = "^1.2"

# Packages for developers for creating documentation
plotly = "^5.10.0"
nemosis = "^3.1.0"
numpy = "^1.23.3"
dash = "^2.6.1"
openpyxl = "^3.0.10"
supabase = "^0.7.1"
gunicorn = "^20.1.0"
psycopg = {extras = ["binary"], version = "^3.1.4"}
dash-bootstrap-components = "^1.2.1"
dash-loading-spinners = "^1.0.0"
pytest-mock = "^3.10.0"
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# MyST parser for Sphinx documentation with furo theme
Sphinx = "^5.0.2"
furo = "^2022.6.21"

# Packages for developers for linting/autoformatting
myst-parser = "^0.18.1"
[tool.poetry.group.style]
optional = true

[tool.poetry.group.style.dependencies]
# static: flake8 (style)
# autoformatter: black (style), isort (import sort)
# pre-commit: tool to configure and install pre-commit hooks
flake8 = "*"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

# Packages for developers for testing
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
# pytest and pytest-cov for coverage
pytest = "^7"
pytest-cov = "^3"

# Config for pytest and pytest-cov
memory-profiler = "^0.61.0"
matplotlib = "^3.6.2"
[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["tests"]
# addopts = add options
# -ra means show extra test summary info for all except passed tests
# --cov points pytest-cov to the src/ dir
# --cov-branch runs branch coverage. See https://breadcrumbscollector.tech/how-to-use-code-coverage-in-python-with-pytest/
# --cov-repot html dumps HTML and xml summaries of pytest-cov in the "tests" folder
addopts = "-ra --cov=src/ --cov-branch --cov-report xml:tests/coverage.xml --cov-report html:tests/htmlcov"

# Config isort to be compatible with black
[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
